--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="app.js" defer></script>
     <title>Fast Notes</title>
 </head>
 <body>
-    <header>
-        <h1>Fast Notes</h1>
-        <h2>Prise de note rapide</h2>
-    </header>
-    <main>
-        <textarea id="txt" cols="40" rows="15" placeholder="Pensez à cliquer sur 'Enregistrer'"></textarea>
-        <br>
-        <button id="save">Enregistrer</button>
-    </main>
-    <footer>
-        <a href="https://glddrk.fr" target="_blank"><h2>GLDDRK.FR</h2></a>
-    </footer>
-    <script src="app.js" defer></script>
+    <h1>Fast Notes</h1>
+    <textarea name="txt" id="txt" cols="30" rows="20" placeholder="Vos notes..."></textarea>
+    <a href="https://glddrk.fr" target="_blank">GLDDRK.FR</a>
 </body>
 </html>
