--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Fast Notes</h1>
-    <textarea name="txt" id="txt" cols="30" rows="20" placeholder="Vos notes..."></textarea>
+    <textarea name="txt" id="txt" cols="30" rows="20" placeholder="Vos notes ici..."></textarea>
     <a href="https://glddrk.fr" target="_blank">GLDDRK.FR</a>
 </body>
 </html>
