--- a/index.html
+++ b/index.html
@@ -13,4 +13,7 @@
     <textarea name="txt" id="txt" cols="30" rows="20" placeholder="Vos notes ici..."></textarea>
     <a href="https://glddrk.fr" target="_blank">GLDDRK.FR</a>
 </body>
+<style>
+@import"https://fonts.googleapis.com/css2?family=Bungee&family=Pacifico&display=swap";*,::before,::after{padding:0;margin:0}body{height:600px;width:350px;background:linear-gradient(180deg,#C850C0 0%,#FFCC70 90%);display:flex;justify-content:space-evenly;align-items:center;flex-direction:column}h1{font-family:'Pacifico',cursive;color:#FFCC70;font-size:55px}a{font-family:'Bungee',cursive;text-decoration:none;color:#C850C0;font-size:35px}textarea{resize:none}
+</style>
 </html>
